remove the images from anchor tag

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="images/Aniket_pawar_photo.png" alt="Aniket Pawar" height=200px></td>
+            <td><img src="Aniket_pawar_photo.png" alt="Aniket Pawar" height=200px></td>
             <td>
                 <h1>Aniket Pawar</h1>
                 <p><em>Working as a <strong>Mechanical Engineer❤️</strong> in <strong><a
